fix banner background covering section side border

--- a/style/main.css
+++ b/style/main.css
@@ -13,8 +13,8 @@ body {
 }
 
 .banner {  
-  width: 100%;
-  margin: 0;  
+  width: calc(100% - 0.5px);
+  margin: 0 auto;  
   background: linear-gradient(to bottom right,  rgb(210, 250, 140),  rgb(180, 220, 110));
   border-bottom: 1px solid black;
   text-align: center;
